# dect_nr-_mesh

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  anchor.conf  build.ps1  build_all.ps1  build_anchor.ps1  build_gateway.ps1  build_sensor.ps1  gateway.conf  nrf9151dk_nrf9151_ns.overlay  ota_upload.ps1  pm.yml  prj.conf  program.ps1  sensor.conf  setup_env.ps1
simulator/: main.py  mesh_model.py  mesh_view.py  packet.py  radio_sim.py
src/: at_cmd.c  at_cmd.h  common.c  common.h  crc.h  display.c  display.h  flash_store.c  flash_store.h  identity.c  identity.h  large_data.c  large_data.h  log_all.h  main.c  mesh.c  mesh.h  mesh_tx.h  nvs_store.c  nvs_store.h  ota.c  ota.h  ota_store.c  ota_store.h  packet.h  paired_store.c  paired_store.h  protocol.h  psram.c  psram.h  queue.c  queue.h  radio.c  radio.h  state.h  storage.c  storage.h
src/anchor/: anchor.c  anchor.h
src/gateway/: gateway.c  gateway.h
src/sensor/: sensor.c  sensor.h
sysbuild/: mcuboot.conf  mcuboot.overlay
